--- a/AppSettingsDummy/MainWindow.xaml
+++ b/AppSettingsDummy/MainWindow.xaml
@@ -14,6 +14,7 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
                 <RowDefinition />
             </Grid.RowDefinitions>
             <GroupBox Header="XmlPerson" >
@@ -53,6 +54,7 @@
                     <TextBox Grid.Row="1" Grid.Column="1"  Text="{Binding ConverterPerson.Age, Mode=OneWay}"></TextBox>
                 </Grid>
             </GroupBox>
+            <DataGrid Grid.Row="2" ItemsSource="{Binding Persons}"></DataGrid>
         </Grid>
         <Grid Grid.Column="1">
             <Grid.ColumnDefinitions>
